--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>nz.ac.auckland.iks</groupId>
 	<artifactId>jira-initializer</artifactId>
-	<version>1.1</version>
+	<version>1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>jira-initializer</name>
 
@@ -29,9 +29,4 @@
 		</dependency>
 
 	</dependencies>
-
-
-  <scm>
-    <tag>jira-initializer-1.1</tag>
-  </scm>
 </project>
