--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>nz.ac.auckland.bathe.initializers</groupId>
 	<artifactId>jira-initializer</artifactId>
-	<version>1.2</version>
+	<version>1.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>jira-initializer</name>
 
@@ -30,8 +30,4 @@
 		</dependency>
 
 	</dependencies>
-
-  <scm>
-    <tag>jira-initializer-1.2</tag>
-  </scm>
 </project>
